# legal-ai-data-governance-loop

./: .env.example  .gitignore  LICENSE  README.md  config.deepseek.smoke.yaml  config.legal_agent_product_eval_v2_focused.yaml  config.practice_api_smoke.yaml  config.practice_pilot.yaml  config.qianfan_a5_multiturn_smoke.yaml  config.qianfan_product_boundary_api_pilot.yaml  config.qianfan_product_boundary_api_smoke.yaml  config.qianfan_product_boundary_eval.yaml  config.qianfan_product_boundary_runnable.yaml  config.qianfan_vendors_smoke.yaml  config.yaml  dataset_manifest.yaml  pyproject.toml  requirements.txt
data/: eval_input.csv
docs/: README.md  a5_multiturn_pilot_results.md  a5_multiturn_smoke_results.md  a5_trace_judge_rubric.md  annotation_guideline.md  api_smoke_run.md  asset_lifecycle_v1.md  case_study.md  data_card.md  deepseek_product_note.md  experiment_design.md  final_portfolio_findings.md  flywheel_v0.1_runbook.md  flywheel_v0.2_independent_regression.md  git_upload_guide.md  human_review_methodology.md  interview_pitch_deepseek_zh.md  interview_pitch_zh.md  interview_talk_track.md  interview_walkthrough_v0.2.md  labeling_sop.md  legal_agent_product_eval_v2_design.md  legal_agent_product_eval_v2_focused_run_plan.md  methodology_risk_register.md  model_boundary_memo.md  multiturn_intake_pilot.md  portfolio_positioning_zh.md  product_prd.md  product_surface.md  project_summary.md  rag_v2_focused_results.md  rag_v2_improvement_plan.md  release_gate.md  results_practice_api_smoke.md  results_product_boundary_eval.md  results_qianfan_vendors_smoke.md  resume_bullets_zh.md  role_fit_deepseek_data_pm.md  runbook.md  stratified_legal_eval_design.md  (+1 more)
prompts/: judge_case_analysis.txt  judge_consultation.txt  judge_document_drafting.txt
scripts/: build_api_pilot_evidence.py  build_public_flywheel_release.py  enrich_source_provenance.py  migrate_case_route_taxonomy.py  validate_portfolio_release.py  validate_public_flywheel_release.py
src/: aggregator.py  router.py
tests/: test_a5_multiturn.py  test_aggregation.py  test_asset_flywheel.py  test_rag.py  (+10 more)
(+132 files in other folders)
