[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "legal-agent-eval-harness"
version = "0.3.0"
description = "Legal AI data-loop governance harness for diagnostic agent evaluation."
requires-python = ">=3.11"
dependencies = [
  "pandas",
  "openpyxl",
  "pydantic",
  "python-dotenv",
  "pyyaml",
  "tqdm",
  "tenacity",
  "openai",
]

[project.optional-dependencies]
test = ["pytest"]

[tool.setuptools.packages.find]
where = ["src"]
