[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "legal-ai-data-governance-loop"
version = "0.3.0"
description = "Legal AI data governance loop for product-boundary evaluation, release gates, and next-round data production."
requires-python = ">=3.11"
dependencies = [
  "pandas",
  "openpyxl",
  "pydantic",
  "python-dotenv",
  "pyyaml",
  "tqdm",
  "tenacity",
  "openai",
]

[project.optional-dependencies]
test = ["pytest"]

[project.scripts]
legal-ai-data-loop = "legal_eval_harness.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
